<resources>
    <string name="app_name">MultiChatLSO</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginFAB">Login</string>
    <string name="username">Username</string>
    <string name="registrati">Registrati</string>
    <string name="conferma_password">Conferma Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>